[package]
name = "GServerManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rustyline = "8.2.0"
termion = "1.5.6"
sysinfo = "0.20.0"
nix = "0.20.0"
signal-hook = "0.3.9"
ctrlc = "3.4.0"
console = "0.14.1"